tests/paczka1/fuzzy1/88635771.err
Error in line 4: p3ock S668 24,L
Error in line 3: S527 S527 29,9
Error in line 2: gyW9Jhc S668 44,1
Error in line 11: 7l5XxM6 S748 77,0
Error in line 8: S527 A144 8,4
Error in line 14: 7l5XxM6 S527 75,7
Error in line 19: 7l5XxM6 A144 80,8
Error in line 17: jbIKCJLZ A144 68,3
Error in line 29: jbIKCJLZ S668 97,7
Error in line 30: jbIKCJLZ A144 73,9
Error in line 27: 7l5XxM6 S748 26,2
